Began styling with css